move korean method names to DisplayName annotation